--- a/Estilos/media-query.css
+++ b/Estilos/media-query.css
@@ -48,7 +48,7 @@ Grandes telas: acima de 1200px
         height: 100%;
     }
 
-    section#login > div#imagem > div#formulario {
+    section#login > div#formulario {
         float: left;
         width: 50%;
     }
