--- a/Estilos/media-query.css
+++ b/Estilos/media-query.css
@@ -11,6 +11,7 @@ Grandes telas: acima de 1200px
 */
 
 @media screen and (min-width:768px) and (max-width: 992px) {
+    /*Configuração para tablet*/
     
     body {
         background-image: linear-gradient(to top, #49a09d, #5f2c82);
@@ -18,6 +19,7 @@ Grandes telas: acima de 1200px
     
     section#login {
         width: 80vw;
+        height: 270px;
     }
 
     section#login > div#imagem {
@@ -33,6 +35,8 @@ Grandes telas: acima de 1200px
 }
 
 @media screen and (min-width: 992px) {
+    /*Configuração para Desktop*/
+
     body {
         background-image: linear-gradient(to top, #49a09d, #5f2c82);
     }
@@ -40,6 +44,7 @@ Grandes telas: acima de 1200px
     
     section#login {
         width: 990px;
+        height: 325px;
     }    
 
     section#login > div#imagem {
@@ -58,7 +63,8 @@ Grandes telas: acima de 1200px
     }
 
     div#formulario > p {
-        font-size: 1.2em;
+        font-size: 1em;
+        margin: 20px 0px;
     }
 
 }
